--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
     </noscript>
     <div id="app"></div>
     <form name="contact-form" netlify netlify-honeypot="bot-field" hidden>
-      <input id="name">
-      <input id="email">
-      <textarea id="message"></textarea>
+      <input name="name" id="name">
+      <input name="email" id="email">
+      <textarea name="message" id="message"></textarea>
     </form>
     <!-- built files will be auto injected -->
   </body>
