--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-    <title>Ricardo Serrano Portfolio</title>
+    <title>Ricardo Serrano Portfolio - Web Developer</title>
+    <meta name="description" content="Ricardo Serrano's Portfolio. Web developer, freelancer, teacher. Find Ricardo Serrano's email, contact information, LinkedIn and more."/>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Ricardo Serrano's Portfolio. Web developer, freelancer, teacher. Find Ricardo Serrano's email, contact information, LinkedIn and more.</strong>
     </noscript>
     <div id="app"></div>
     <form name="contact-form" netlify netlify-honeypot="bot-field" hidden>
